--- a/PowershellTelephony/PowershellTelephony.Test/PowershellTelephony.Test.csproj
+++ b/PowershellTelephony/PowershellTelephony.Test/PowershellTelephony.Test.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PowershellTelephony\PowershellTelephony.csproj">
+      <Project>{84e66350-5596-4469-ae7a-fffe3bd58d68}</Project>
+      <Name>PowershellTelephony</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
