--- a/PowershellTelephony/PowershellTelephony.Test/PowershellTelephony.Test.csproj
+++ b/PowershellTelephony/PowershellTelephony.Test/PowershellTelephony.Test.csproj
@@ -46,6 +46,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NewSmsMessageCmdletUnitTest.cs" />
